// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector snapshots with all props 1`] = `
Array [
  <ForwardRef(render)
    styles={[Function]}
  />,
  <Root>
    <div
      className="css-1o7hb61-Root el5yv3l0"
    >
      <label
        htmlFor="scroller-type"
      >
        test label
      </label>
      <select
        id="scroller-type"
        onChange={[Function]}
        value="B"
      >
        <option
          key="a"
          value="a"
        >
          A
        </option>
        <option
          key="b"
          value="b"
        >
          B
        </option>
        <option
          key="c"
          value="c"
        >
          C
        </option>
      </select>
    </div>
  </Root>,
]
`;

exports[`Selector snapshots without selected prop 1`] = `
Array [
  <ForwardRef(render)
    styles={[Function]}
  />,
  <Root>
    <div
      className="css-1o7hb61-Root el5yv3l0"
    >
      <label
        htmlFor="scroller-type"
      >
        test label
      </label>
      <select
        id="scroller-type"
        onChange={[Function]}
      >
        <option
          key="a"
          value="a"
        >
          A
        </option>
        <option
          key="b"
          value="b"
        >
          B
        </option>
        <option
          key="c"
          value="c"
        >
          C
        </option>
      </select>
    </div>
  </Root>,
]
`;
